# loft

./: README.md  pyproject.toml  requirements.txt
docs/: BUILD.md  MANUAL.md
loft/: __main__.py  config.py
loft/ui/widgets/: main_window.py  qr_code.py
loft/web/: server.py
loft/web/blueprints/: api.py  landing.py
loft/web/static/src/js/: api.js  download.js  security.js
loft/web/templates/pages/: index.html
